New Depsgraph - Driver using "self" needs reloading file to work. #52901

Closed
opened 2017-09-26 00:37:02 +02:00 by Mario Mey · 4 comments

System Information
Debian Mate 9, nVidia GT620

Blender Version
Broken: from 2.78, when self was implemented.
Worked: none

Short description of error
A keyframed "Restrict Render" is driving "Restrict View", using "self.hide_render" in Scripted Expression ("use self" is checked). When copying this drive and pasting in another object, this driver will not work till reload the file.

Exact steps for others to reproduce the error
Run Blender with new DepsGraph. Open file, check the animation of both objects ("Restrict Render" is animated").
Restrict View of Cube.001 has a drive. Copy this drive and paste it in Restrict View of Cube. Move along timeline. As it uses self, Cube should respect its own Restrict Render, but it doesn't.

Run Blender with traditional DepsGraph, open the file, do the same steps. Restrict View start working properly inmediatly.

108-depsgraph-driver.blend

**System Information** Debian Mate 9, nVidia GT620 **Blender Version** Broken: from 2.78, when *self* was implemented. Worked: none **Short description of error** A keyframed "Restrict Render" is driving "Restrict View", using "self.hide_render" in Scripted Expression ("use self" is checked). When copying this drive and pasting in another object, this driver will not work till reload the file. **Exact steps for others to reproduce the error** Run Blender with new DepsGraph. Open file, check the animation of both objects ("Restrict Render" is animated"). *Restrict View* of *Cube.001* has a drive. Copy this drive and paste it in *Restrict View* of *Cube*. Move along timeline. As it uses *self*, *Cube* should respect its own *Restrict Render*, but it doesn't. Run Blender with traditional DepsGraph, open the file, do the same steps. *Restrict View* start working properly inmediatly. [108-depsgraph-driver.blend](https://archive.blender.org/developer/F875451/108-depsgraph-driver.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @MarioSottile

Added subscriber: @MarioSottile

This issue was referenced by 96e84d002a

This issue was referenced by 96e84d002adc016a2a4bd780cd506f5e971b4c0b
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#52901
No description provided.