Fix T52901: New Depsgraph - Driver using "self" needs reloading file to work